Add method endpoints to set and find room's user